1) Completed Quick jot. 2) Completed  image uploaded functinality as well as checklist. 3) Complete the task jot except 'One Time' and 'recurring' functionality. 4) Seperate the section of jot in different module

--- a/bower.json
+++ b/bower.json
@@ -28,7 +28,9 @@
     "angular-material-icons": "^0.7.1",
     "angular-ui-router": "0.4.1",
     "jquery": "^3.2.1",
-    "owl.carousel": "^2.2.1"
+    "owl.carousel": "^2.2.1",
+    "ng-file-upload-shim": "^12.2.13",
+    "ng-file-upload": "^12.2.13"
   },
   "resolutions": {
     "angular-cookies": "1.6.5",
