--- a/package.json
+++ b/package.json
@@ -15,12 +15,17 @@
     "ejs": "^2.5.6",
     "express": "^4.15.3",
     "express-jwt": "^5.3.0",
+    "file-type": "^5.2.0",
+    "formidable": "^1.1.1",
+    "fs-extra": "^4.0.0",
     "gulp-util": "^3.0.8",
     "jsonwebtoken": "^7.4.1",
     "mongodb": "^2.2.30",
     "mongoose": "^4.11.1",
     "mongoose-unique-validator": "^1.0.5",
-    "multer": "^1.3.0"
+    "multer": "^1.3.0",
+    "read-chunk": "^2.1.0",
+    "thumbnail": "^0.1.9"
   },
   "devDependencies": {
     "gulp": "^3.9.1",
