--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "reactstrap": "^5.0.0-alpha.3",
     "redux": "^3.7.2",
     "redux-devtools": "^3.4.1",
+    "redux-form": "^7.1.2",
     "redux-logger": "^3.0.6",
     "redux-saga": "^0.16.0"
   },
